--- a/locales/it.csv
+++ b/locales/it.csv
@@ -33,7 +33,7 @@ Reopen_itt_again,Per favore riapri di nuovo.
 Theme,Tema
 Language,Lingua
 Browsers_extensions,Estensioni per browser
-All,🏷 Tutti
+All,Tutti
 Search,Cerca
 Create_restore_point,Crea un punto di ripristino
 Portable_Downloads_Folder,Cartella download portatile
@@ -46,26 +46,26 @@ Exit_msg,Sei sicuro di voler chiudere il programma? Se ci sono installazioni in 
 Empty_save_msg,Scegli almeno un'app per salvarla.
 easter_egg, Riuscirai a scoprire il segreto nascosto? Tuffati nel codice sorgente sii il primo a scoprire la funzionalità e integrala nello strumento
 system_protection,Protezione del sistema
-web_browsers,🌐 Browser Web
-media,🎬 Media
-media_tools,🎚 Strumenti Media
-documents,📃 Documenti
-compression,📀 Compressione
-communication,📞 Comunicazione
-file_sharing,📁 Condivisione File
-imaging,📷 Imaging
-gaming,🎮 Giochi
-utilities,🔨 Utilità
-disk_tools,💽 Strumenti Disco
-development,👩‍💻 Sviluppo
-security,🛡 Sicurezza
-portable,💼 Portatile
-runtimes,📈 Runtime
-drivers,🔌 Driver
-privacy,🔒 Privacy
-fixer,🔧 Riparatore
-performance,⚡ Prestazioni
-personalization,🎨 Personalizzazione
-power,🔋 Potenza
-protection,🛡 Protezione
-classic,🕰 Classico
+web_browsers,Browser Web
+media,Media
+media_tools,Strumenti Media
+documents,Documenti
+compression,Compressione
+communication,Comunicazione
+file_sharing,Condivisione File
+imaging,Imaging
+gaming,Giochi
+utilities,Utilità
+disk_tools,Strumenti Disco
+development,Sviluppo
+security,Sicurezza
+portable,Portatile
+runtimes,Runtime
+drivers,Driver
+privacy,Privacy
+fixer,Riparatore
+performance,Prestazioni
+personalization,Personalizzazione
+power,Potenza
+protection,Protezione
+classic,Classico
