--- a/locales/ru.csv
+++ b/locales/ru.csv
@@ -33,7 +33,7 @@ Reopen_itt_again,Пожалуйста перезапустите ITT.
 Theme,Тема
 Language,Язык
 Browsers_extensions,Расширения для браузеров
-All,🏷 Все
+All,Все
 Search,Поиск
 Create_restore_point,Создать точку восстановления
 Portable_Downloads_Folder,Папка для портативных загрузок
@@ -46,26 +46,26 @@ Exit_msg,Вы уверены что хотите закрыть программ
 Empty_save_msg,Выберите хотя бы одно приложение для сохранения
 easter_egg, Можешь ли ты раскрыть скрытый секрет? Погрузись в исходный код стань первым кто обнаружит функцию и интегрируй её в инструмент
 system_protection,Системная защита
-web_browsers,🌐 Веб-браузеры
-media,🎬 Медиа
-media_tools,🎚 Медиа-инструменты
-documents,📃 Документы
-compression,📀 Архивация
-communication,📞 Связь
-file_sharing,📁 Обмен файлами
-imaging,📷 Обработка изображений
-gaming,🎮 Игры
-utilities,🔨 Утилиты
-disk_tools,💽 Работа с дисками
-development,👩‍💻 Разработка
-security,🛡 Безопасность
-portable,💼 Портативные
-runtimes,📈 Среды выполнения
-drivers,🔌 Драйверы
-privacy,🔒 Конфиденциальность
-fixer,🔧 Исправитель
-performance,⚡ Производительность
-personalization,🎨 Персонализация
-power,🔋 Мощность
-protection,🛡 Защита
-classic,🕰 Классический
+web_browsers,Веб-браузеры
+media,Медиа
+media_tools,Медиа-инструменты
+documents,Документы
+compression,Архивация
+communication,Связь
+file_sharing,Обмен файлами
+imaging,Обработка изображений
+gaming,Игры
+utilities,Утилиты
+disk_tools,Работа с дисками
+development,Разработка
+security,Безопасность
+portable,Портативные
+runtimes,Среды выполнения
+drivers,Драйверы
+privacy,Конфиденциальность
+fixer,Исправитель
+performance,Производительность
+personalization,Персонализация
+power,Мощность
+protection,Защита
+classic,Классический
