--- a/locales/de.csv
+++ b/locales/de.csv
@@ -14,7 +14,7 @@ Settings,Einstellungen
 Save,Speichern
 Restore,Wiederherstellen
 Music,Musik
-On,"Ein"
+On,Ein
 Off,Aus
 Disk_Managment,Datenträgerverwaltung
 Msconfig,Systemkonfiguration
