--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -24,13 +24,13 @@ Settings,إعدادات
 Save,حفظ البرامج
 Restore,أسترجاع البرامج
 Music,الموسيقى
-On,"تشغيل "
+On,تشغيل 
 Off,كتم
 Dark,ليلا
 Light,نهارا
 Use_system_setting,استخدم إعدادات النظام
 Create_desktop_shortcut,أنشاء أختصار على سطح المكتب
-Reset_preferences," إعادة التفضيلات إلى الوضع الافتراضي"
+Reset_preferences,إعادة التفضيلات إلى الوضع الافتراضي
 Reopen_itt_again,يرجى اعادة فتح الاداة مرة اخرى
 Theme,المظهر
 Language,اللغة
