--- a/locales/fr.csv
+++ b/locales/fr.csv
@@ -14,7 +14,7 @@ Settings,Paramètres
 Save,Sauvegarder
 Restore,Restaurer
 Music,Musique
-On,"Activé "
+On,Activé
 Off,Désactivé
 Disk_Managment,GestiOn des disques
 Msconfig,Configuration du système
