--- a/locales/tr.csv
+++ b/locales/tr.csv
@@ -14,7 +14,7 @@ Settings,Ayarlar
 Save,Kayıt Et
 Restore,Geri Yükle
 Music,Müzik
-On,"Açık "
+On,Açık
 Off,Kapalı
 Disk_Managment,Disk Yönetimi
 Msconfig,Sistem Yapılandırması
