--- a/locales/es.csv
+++ b/locales/es.csv
@@ -14,7 +14,7 @@ Settings,COnfiguración
 Save,Guardar
 Restore,Restaurar
 Music,Música
-On,"Encendido"
+On,Encendido
 Off,Apagado
 Disk_Managment,Administración de discos
 Msconfig,Configuración del sistema
