--- a/locales/ko.csv
+++ b/locales/ko.csv
@@ -45,7 +45,7 @@ Applying,적용 중..
 Please_wait,배경에서 프로세스가 진행 중입니다. 잠시 기다려주세요.
 Last_update,마지막 업데이트
 Exit_msg,프로그램을 종료하시겠습니까? 진행 중인 설치가 있으면 중단됩니다.
-easter_egg,숨겨진 비밀을 발견할 수 있습니다. 소스 코드에 뛰어들고, 최초로 기능을 발견하고 도구에 통합하세요
+easter_egg,숨겨진 비밀을 발견할 수 있습니다. 소스 코드에 뛰어들고 최초로 기능을 발견하고 도구에 통합하세요
 system_protection,웹 보호
 web_browsers,웹 브라우저
 media,미디어
