Package Manager & Auto

--- a/locales/de.csv
+++ b/locales/de.csv
@@ -69,3 +69,5 @@ personalization,Personalisierung
 power,Energie
 protection,Schutz
 classic,Klassisch
+auto,automatisch
+package_manager,Manager der Pakete
