--- a/locales/es.csv
+++ b/locales/es.csv
@@ -69,3 +69,5 @@ personalization,Personalización
 power,Potencia
 protection,Protección
 classic,Clásico
+auto,automático
+package_manager,Manager de paquetes
