--- a/locales/fr.csv
+++ b/locales/fr.csv
@@ -69,3 +69,5 @@ personalization,Personnalisation
 power,Puissance
 protection,Protection
 classic,Classique
+auto,automatique
+package_manager,Manager des paquets
