--- a/locales/it.csv
+++ b/locales/it.csv
@@ -69,3 +69,5 @@ personalization,Personalizzazione
 power,Potenza
 protection,Protezione
 classic,Classico
+auto,automatico
+package_manager,Gestore pacchetti
