--- a/locales/ru.csv
+++ b/locales/ru.csv
@@ -69,3 +69,5 @@ personalization,Персонализация
 power,Мощность
 protection,Защита
 classic,Классический
+auto,Автоматический
+package_manager,Менеджер пакетов
