--- a/locales/ar.csv
+++ b/locales/ar.csv
@@ -48,17 +48,17 @@ Exit_msg,هل أنت متأكد من رغبتك في إغلاق البرنامج
 Empty_save_msg,يرجى اختيار تطبيق واحد على الاقل لحفظه
 easter_egg,تقدر تكتشف الميزة المخفية؟ تصفح الكود، وكن أول واحد يكتشف الميزة، ويضيفها للأداة
 system_protection,حماية النظام
-web_browsers,المتصفحات
+web browsers,متصفحات
 media,مشغل
-media_tools,أدوات الفيديو
+media tools,أدوات الفيديو
 documents,المستندات
 compression,الضغط
 communication,الاتصال
-file_sharing,مشاركة الملفات
+file sharing,مشاركة الملفات
 imaging,صور
 gaming,ألعاب
 utilities,أدوات النظام
-disk_tools,أدوات القرص
+disk tools,أدوات القرص
 development,تطوير
 security,حماية
 portable,محمولة
