--- a/locales/de.csv
+++ b/locales/de.csv
@@ -70,4 +70,4 @@ power,Energie
 protection,Schutz
 classic,Klassisch
 auto,automatisch
-package manager,Manager der Pakete
+package_manager,Manager der Pakete
