--- a/locales/it.csv
+++ b/locales/it.csv
@@ -46,17 +46,17 @@ Exit_msg,Sei sicuro di voler chiudere il programma? Se ci sono installazioni in 
 Empty_save_msg,Scegli almeno un'app per salvarla.
 easter_egg, Riuscirai a scoprire il segreto nascosto? Tuffati nel codice sorgente sii il primo a scoprire la funzionalità e integrala nello strumento
 system_protection,Protezione del sistema
-web_browsers,Browser Web
+web browsers,Browser Web
 media,Media
-media_tools,Strumenti Media
+media tools,Strumenti Media
 documents,Documenti
 compression,Compressione
 communication,Comunicazione
-file_sharing,Condivisione File
+file sharing,Condivisione File
 imaging,Imaging
 gaming,Giochi
 utilities,Utilità
-disk_tools,Strumenti Disco
+disk tools,Strumenti Disco
 development,Sviluppo
 security,Sicurezza
 portable,Portatile
