--- a/locales/tr.csv
+++ b/locales/tr.csv
@@ -46,17 +46,17 @@ Exit_msg,Programı kapatmak istediğinizden emin misiniz? Herhangi bir kurulum v
 Empty_save_msg,Kaydetmek için en az bir uygulama seçin
 easter_egg, Gizli sırrı keşfedebilir misin? Kaynağa dal özelliği ilk keşfeden ol ve araca entegre et
 system_protection,Sistem koruması
-web_browsers,Web Tarayıcıları
+web browsers,Web Tarayıcıları
 media,Medya
-media_tools,Medya Araçları
+media tools,Medya Araçları
 documents, Belgeler
 compression,Sıkıştırma
 communication,İletişim
-file_sharing,Dosya Paylaşımı
+file sharing,Dosya Paylaşımı
 imaging,Görüntü İşleme
 gaming,Oyun
 utilities,Araçlar
-disk_tools,Disk Araçları
+disk tools,Disk Araçları
 development,Geliştirme
 security,Güvenlik
 portable,Taşınabilir
