--- a/locales/ko.csv
+++ b/locales/ko.csv
@@ -47,17 +47,17 @@ Last_update,마지막 업데이트
 Exit_msg,프로그램을 종료하시겠습니까? 진행 중인 설치가 있으면 중단됩니다.
 easter_egg,숨겨진 비밀을 발견할 수 있습니다. 소스 코드에 뛰어들고 최초로 기능을 발견하고 도구에 통합하세요
 system_protection,웹 보호
-web_browsers,웹 브라우저
+web browsers,웹 브라우저
 media,미디어
-media_tools,미디어 도구
+media tools,미디어 도구
 documents,문서
 compression,압축
 communication,커뮤니케이션
-file_sharing,파일 공유
+file sharing,파일 공유
 imaging,이미지 처리
 gaming,게임
 utilities,유틸리티
-disk_tools,디스크 도구
+disk tools,디스크 도구
 development,개발
 security,보호
 portable,포터블
