--- a/locales/zh.csv
+++ b/locales/zh.csv
@@ -47,17 +47,17 @@ Last_update,最后更新
 Exit_msg,您确定要关闭程序吗？如果有任何安装正在进行，它们将被终止。
 easter_egg, 你能发现隐藏的秘密吗？深入源代码，成为第一个发现功能的人，并将其集成到工具中
 system_protection,系统保护
-web_browsers,网页浏览器
+web browsers,网页浏览器
 media,媒体
-media_tools,媒体工具
+media tools,媒体工具
 documents,文档
 compression,压缩
 communication,通讯
-file_sharing,文件共享
+file sharing,文件共享
 imaging,图像处理
 gaming,游戏
 utilities,实用工具
-disk_tools,磁盘工具
+disk tools,磁盘工具
 development,开发
 security,安全
 portable,便携版
